fixes spacing around journal link section

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -625,13 +625,13 @@ section#splash {
     float: left;
     width: 50%;
     padding: 0 2em 0 0;
-    margin-bottom: 8em;
+    margin-bottom: 5em;
   }
   p:last-of-type {
     float: right;
     width: 50%;
     padding: 0 0 0 2em;
-    margin-bottom: 2em;
+    margin-bottom: 4em;
   }
 }
 
